# savedb_postgres

./: Cargo.toml  reset_db.sh
migrations/: 0001_account.sql  0002_purchase.sql  0003_outliers.sql
queries/: list_all_purchases.sql  upload_accounts.sql  upload_outliers.sql  upload_purchases.sql
src/: lib.rs
